--- a/css/style.css
+++ b/css/style.css
@@ -7,37 +7,9 @@ body {
     padding-right: 130px;
 }
 
-.formul {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 50%;
-}
-
-.formulario {
-    display: flex;
-    flex-direction: column;
-    width: 50%;
-}
-
-
-.dados {
-    border: solid 1px hsl(270, 3%, 87%);; 
-    border-radius: 6px;
-    padding: 10px;
-}
-
-label {
-    margin-top: 25px;
-    margin-bottom: 10px;
-    color: hsl(278, 68%, 11%)
-}
-
-.enviar {
-    font-family: 'Space Grotesk', sans-serif;
-    color: white;
-    background-color: hsl(278, 68%, 11%);
-    border-radius: 6px;
-    padding: 10px;
-    margin-top: 40px;
+input {
+    border: 1px solid hsl(279, 6%, 55%);
+    border-radius: 5px;
+    height: 30px;
+    color: red;
 }
