--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,54 @@
+
 body {
     display: flex;
     font-family: 'Space Grotesk', sans-serif;
+    margin: 0;
+
+}
+
+html, body {
+    height: 100%;
+}
+
+input::placeholder {
+    color: hsl(270, 3%, 87%);
+    font-weight: 500;
+}
+
+label {
+    color: hsl(278, 68%, 11%);
+}
+
+.btn {
+    background-color: hsl(278, 68%, 11%);
+    border: none;
+    border-radius: 5px;
+    color: white;
+    font-weight: 500;
+    width: 100%;
+    height: 45px;
+    font-family: 'Space Grotesk', sans-serif;
+    margin-top: 10px;
 }
 
 .imagem {
-    padding-right: 130px;
+    background-image: url(/images/bg-main-desktop.png);
+    background-repeat: no-repeat;
+    width: 40%;
 }
 
-input {
-    border: 1px solid hsl(279, 6%, 55%);
+.areaFormulario {
+    display: flex;
+    align-items: center;
+    width: 60%;
+    padding-left: 250px;
+    padding-right: 200px;
+}
+
+.form-control {
+    border: 1px solid hsl(270, 3%, 87%);
     border-radius: 5px;
     height: 30px;
-    color: red;
+    width: 100%;
+    margin: 10px 0 20px 0;
 }
