--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ input::placeholder {
 
 label {
     color: hsl(278, 68%, 11%);
+    font-size: 18px;
 }
 
 .btn {
@@ -26,9 +27,17 @@ label {
     color: white;
     font-weight: 500;
     width: 100%;
-    height: 45px;
+    height: 50px;
     font-family: 'Space Grotesk', sans-serif;
     margin-top: 10px;
+}
+
+.btn:hover {
+    background-color: hsl(278, 68%, 11%);
+}
+
+.btn:target {
+    background-color: hsl(278, 68%, 11%);
 }
 
 .imagem {
@@ -48,7 +57,19 @@ label {
 .form-control {
     border: 1px solid hsl(270, 3%, 87%);
     border-radius: 5px;
-    height: 30px;
+    height: 50px;
     width: 100%;
     margin: 10px 0 20px 0;
+    font-size: 18px;
 }
+
+#front {
+    padding-left: 150px;
+    padding-top: 70px;
+}
+
+#back {
+    padding-left: 230px;
+    padding-top: 35px;
+}
+
